Revision de la methode AllocPage()